--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -4,28 +4,37 @@
 }
 .navbar.solid {
   transition: all 0.6s ease-in-out;
-  background-color: #423f3e;
+  background-color: #fff;
+  box-shadow: 0px 0px 8px #808080;
+}
+.navbar .navbar-menu {
+  color: #fff;
+  font-weight: 500;
 }
 .navbar.solid .navbar-menu {
-  color: #fff;
+  color: #131313;
 }
-.navbar.solid .navbar-menu:hover,
 .navbar-menu:hover {
-  color: #29a0d3;
+  color: #29a0d3 !important;
 }
-.navbar-menu {
-  color: #2e2727;
+.nav-link .register-button {
+  border-radius: 0px;
+  background-color: transparent;
+  border: 2px solid #fff;
   font-weight: 500;
 }
-.register-button {
-  border-radius: 30px;
-  background-color: #29a0d3;
-  font-weight: 500;
-  border: none;
+.navbar.solid .nav-link .register-button {
+  border-color: #131313;
+  color: #131313;
 }
-.register-button:hover {
+.nav-link .register-button:hover {
+  border: 2px solid;
+  border-image: linear-gradient(to right, #29a0d3, hsl(280, 87%, 65%)) 10;
+  /* border-radius: 30px; */
   background-image: linear-gradient(to right, #29a0d3, hsl(280, 87%, 65%));
+  color: #fff !important;
 }
+
 @media (min-width: 768px) {
   .navbar-menu {
     margin-left: 40px;
@@ -38,22 +47,25 @@
     position: absolute;
     height: 4px;
     width: 0;
-    background-color: #29a0d3;
-    bottom: 0;
+    background-image: linear-gradient(to right, #29a0d3, hsl(280, 87%, 65%));
+    bottom: -10px;
+    border-radius: 6px;
   }
   .navbar-menu:hover::before {
-    transition: all 0.3s ease;
+    transition: all 0.4s ease-out;
     width: 100%;
   }
-  .navbar-menu-button {
-    margin-left: 20px;
+  .register-button {
+    margin-left: 24px;
   }
 }
 @media (max-width: 767px) {
+  .nav-link {
+    margin: 8px auto;
+  }
   .navbar-menu,
   .navbar-menu-button {
     color: #fff;
-    background-color: #423f3e;
     border: 0;
   }
 }
