updated timeline component

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,5 +1,6 @@
 /*Swiper CSS*/
-.media h1 {
+.media h1,
+.timeline_main h1 {
   color: #013f72;
   margin: 2rem auto;
 }
@@ -130,4 +131,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.vertical-timeline-element-icon {
+  box-shadow: 0 0 0 4px hsl(280, 87%, 65%), inset 0 2px 0 rgb(0 0 0/8%),
+    0 3px 0 4px rgb(0 0 0/5%) !important;
+}
+.vertical-timeline-element-content {
+  box-shadow: 0 3px 0 #29a0d3 !important;
+}
+.vertical-timeline-element-content-arrow {
+  border: 7px solid transparent;
+  border-right: 7px solid #29a0d3 !important;
+}
+.timeline_logo img {
+  background-color: #fff;
+  border-radius: 100%;
+  width: 60px;
+}
+@media screen and (max-width: 1170px) {
+  .timeline_logo img {
+    width: 40px;
+  }
 }
