--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,70 +1,65 @@
-/*Swiper CSS*/
+/*************************************** Gallery ***************************************/
+.media {
+  padding: 0 0 2rem;
+}
 .media h1,
 .timeline_main h1 {
   color: #013f72;
-  margin: 2rem auto;
 }
-
-.swiper {
-  width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.swiper-slide {
-  width: 300px;
-  height: 300px;
-}
-
-.swiper-slide img:hover {
-  position: absolute;
-  scale: 1.1;
-  transition: all 0.4s ease-in-out;
-  z-index: 100;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.swiper-pagination {
-  padding-bottom: 10px;
+.myGallerySwiper {
   position: relative;
-  bottom: 0;
+  padding-bottom: 40px !important;
 }
-
-.swiper-container {
-  width: 480px;
+.myGallerySwiper .swiper-slide {
+  width: 28rem;
 }
-.swiper-button-prev,
-.swiper-button-next {
-  background-color: #131313;
-  position: relative;
-  padding: 1rem;
+.myGallerySwiper .swiper-slide-active {
+  background-color: #fff;
+  padding: 6px;
+  border: 4px solid #29a0d3 !important;
+  border-radius: 32px;
+  -webkit-filter: none !important;
 }
-
-/*Break points for gallery*/
-@media screen and (min-width: 640px) {
-  .swiper-container {
-    width: 640px;
+.swiper-slide-visible {
+  -webkit-filter: blur(2px) !important;
+}
+.myGallerySwiper .swiper-slide {
+  -webkit-filter: blur(5px);
+}
+.myGallerySwiper .swiper-slide img {
+  border-radius: 21px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+@media screen and (max-width: 1024px) {
+  .myGallerySwiper .swiper-slide {
+    width: 24rem;
+  }
+}
+@media screen and (max-width: 760px) {
+  .myGallerySwiper .swiper-slide {
+    width: 20rem;
+  }
+}
+@media screen and (max-width: 450px) {
+  .myGallerySwiper .swiper-slide {
+    width: 18rem;
+  }
+  .myGallerySwiper .swiper-slide-active {
+    padding: 4px;
+    border: 4px solid #29a0d3 !important;
+    border-radius: 28px;
+    -webkit-filter: none !important;
+  }
+}
+@media screen and (max-width: 320px) {
+  .myGallerySwiper .swiper-slide {
+    width: 16rem;
   }
 }
 
-@media screen and (min-width: 768px) {
-  .swiper-container {
-    width: 768px;
-  }
-}
-
-@media screen and (max-width: 649px) {
-  .swiper-container {
-    width: 1024px;
-  }
-}
-
-/******************* CountDown *******************/
+/***************************************** CountDown *****************************************/
 .count_div {
   display: inline-block;
   padding: 0.3rem 2rem;
@@ -125,14 +120,13 @@
   }
 }
 
-/******************* TimeLine *******************/
+/************************************** TimeLine **************************************/
 .time_line {
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .vertical-timeline-element-icon {
   box-shadow: 0 0 0 4px hsl(280, 87%, 65%), inset 0 2px 0 rgb(0 0 0/8%),
     0 3px 0 4px rgb(0 0 0/5%) !important;
