--- a/src/css/msgsecgen.css
+++ b/src/css/msgsecgen.css
@@ -40,6 +40,7 @@ section {
   border-radius: 8px;
   color: white;
   margin-left: -150px;
+  padding-left: 20%;
 }
 .right h1 {
   font-size: 40px;
@@ -79,8 +80,10 @@ section {
   .right {
     width: 100%;
     margin: 0;
+    padding: 5%;
     padding-top: 120px;    
     margin-top: -110px;
+    
   }
   .content{
     display: block;
@@ -107,6 +110,7 @@ section {
   .right {
     width: 100%;
     margin: 0;
+    padding: 8%;
     padding-top: 120px;    
     margin-top: -110px;
   }
