--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -115,8 +115,8 @@ figure.snip1157 .author h5 span {
 
   .swiper-container {
     width: 100%;
-    /* margin: 40px 0;
-    padding: 45px 0; */
+    margin: 40px 0;
+    padding: 45px 0;
   }
   
   .swiper-slide {
