--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -119,43 +119,41 @@ figure.snip1157 .author h5 span {
     padding: 45px 0;
   }
   
-  .swiper-slide {
+  .mySwiper .swiper-slide {
     opacity: 0.4;
     overflow: hidden;
     transition: .7s;
   }
   
-  .swiper-slide img {
+  /* .swiper-slide img {
     display: block;
     object-fit: cover;
     height: 100%;
     width: 100%;
     border-radius: 8px;
-  }
+  } */
   
-  .swiper-slide-active {
+  .mySwiper .swiper-slide-active {
+    opacity: 1;
+    z-index: 1;
+    transform: scale(1.5);
     
   }
   
   .testimonials-swiper-container{
-    /* margin: 3% 5%; */
+    margin: 3% 5%;
   }
   
-  .swiper-slide {
+  .mySwiper .swiper-slide  {
     opacity: .25;
   }
-  .swiper-slide-visible {
+  .mySwiper .swiper-slide-visible {
     opacity: 1;
     z-index: 1;
     transform: scale(1.5);
   }
   
-  .img-box .img{
-    display: block;
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-  }
+  /*  */
   
  
   
