--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -10,43 +10,43 @@
   position: relative;
   padding-bottom: 40px !important;
 }
-.myGallerySwiper .swiper-slide {
+.myGallerySwiper .g-slide {
   width: 28rem;
 }
-.myGallerySwiper .swiper-slide-active {
+.myGallerySwiper .g-slide.swiper-slide-active {
   background-color: #fff;
   padding: 6px;
   border: 4px solid #29a0d3 !important;
   border-radius: 32px;
   -webkit-filter: none !important;
 }
- .swiper-slide-visible {
+.g-slide.swiper-slide-visible {
   -webkit-filter: blur(2px) !important;
 }
-.myGallerySwiper .swiper-slide {
+.myGallerySwiper .g-slide {
   -webkit-filter: blur(5px);
 }
-.myGallerySwiper .swiper-slide img {
+.myGallerySwiper .g-slide img {
   border-radius: 21px;
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
 @media screen and (max-width: 1024px) {
-  .myGallerySwiper .swiper-slide {
+  .myGallerySwiper .g-slide {
     width: 24rem;
   }
 }
 @media screen and (max-width: 760px) {
-  .myGallerySwiper .swiper-slide {
+  .myGallerySwiper .g-slide {
     width: 20rem;
   }
 }
 @media screen and (max-width: 450px) {
-  .myGallerySwiper .swiper-slide {
+  .myGallerySwiper .g-slide {
     width: 18rem;
   }
-  .myGallerySwiper .swiper-slide-active {
+  .myGallerySwiper .g-slide.swiper-slide-active {
     padding: 4px;
     border: 4px solid #29a0d3 !important;
     border-radius: 28px;
@@ -54,7 +54,7 @@
   }
 }
 @media screen and (max-width: 320px) {
-  .myGallerySwiper .swiper-slide {
+  .myGallerySwiper .g-slide {
     width: 16rem;
   }
 }
