--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -1,7 +1,7 @@
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,800);
 figure.snip1157 {
-  font-family: 'Raleway', Arial, sans-serif;
+  font-family: "Raleway", Arial, sans-serif;
   position: relative;
   overflow: hidden;
   /* margin: 10px; */
@@ -30,7 +30,7 @@ figure.snip1157 blockquote {
   display: block;
   border-radius: 8px;
   position: relative;
-  background-color: #29A0D3;
+  background-color: #29a0d3;
   padding: 30px 50px 30px 50px;
   font-size: 0.8em;
   font-weight: 500;
@@ -41,7 +41,7 @@ figure.snip1157 blockquote {
 }
 figure.snip1157 blockquote:before,
 figure.snip1157 blockquote:after {
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
   content: "\201C";
   position: absolute;
   font-size: 50px;
@@ -63,7 +63,7 @@ figure.snip1157 .arrow {
   height: 0;
   border-left: 0 solid transparent;
   border-right: 25px solid transparent;
-  border-top: 25px solid #29A0D3;
+  border-top: 25px solid #29a0d3;
   margin: 0;
   position: absolute;
 }
@@ -90,8 +90,6 @@ figure.snip1157 .author h5 span {
   padding-left: 5px;
 }
 
-
-
 .testimonial-section {
   display: flex;
   justify-content: center;
@@ -101,59 +99,53 @@ figure.snip1157 .author h5 span {
   height: 100%;
   margin-top: 3%;
 }
-.d{
-  min-height:250px
+.d {
+  min-height: 250px;
 }
 
 /**/
 
-.testimonial-section{
-    margin: 20px;
+.testimonial-section {
+  margin: 20px;
 }
 
-  
+.swiper-container {
+  width: 100%;
+  margin: 40px 0;
+  padding: 45px 0;
+}
 
-  .swiper-container {
-    width: 100%;
-    margin: 40px 0;
-    padding: 45px 0;
-  }
-  
-  .mySwiper .swiper-slide {
-    opacity: 0.4;
-    overflow: hidden;
-    transition: .7s;
-  }
-  
-  /* .swiper-slide img {
+.mySwiper .t-slide {
+  opacity: 0.4;
+  overflow: hidden;
+  transition: 0.7s;
+}
+
+/* .swiper-slide img {
     display: block;
     object-fit: cover;
     height: 100%;
     width: 100%;
     border-radius: 8px;
   } */
-  
-  .mySwiper .swiper-slide-active {
-    opacity: 1;
-    z-index: 1;
-    transform: scale(1.5);
-    
-  }
-  
-  .testimonials-swiper-container{
-    margin: 3% 5%;
-  }
-  
-  .mySwiper .swiper-slide  {
-    opacity: .25;
-  }
-  .mySwiper .swiper-slide-visible {
-    opacity: 1;
-    z-index: 1;
-    transform: scale(1.5);
-  }
-  
-  /*  */
-  
- 
-  
+
+.mySwiper .t-slide.swiper-slide-active {
+  opacity: 1;
+  z-index: 1;
+  transform: scale(1.5);
+}
+
+.testimonials-swiper-container {
+  margin: 3% 5%;
+}
+
+.mySwiper .t-slide {
+  opacity: 0.25;
+}
+.mySwiper .t-slide.swiper-slide-visible {
+  opacity: 1;
+  z-index: 1;
+  transform: scale(1.5);
+}
+
+/*  */
