--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
+html{
+  overflow-x: hidden;
+}
+
 .about-us {
   margin: 20px auto;
   font-family: 'Poppins';
