--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -15,6 +15,7 @@ html{
   text-align: justify;
   padding-left: 40px;
   font-size: 18px;
+  color: white;
 }
 .about-us .about-us-div {
   display: flex;
