--- a/src/css/msgsecgen.css
+++ b/src/css/msgsecgen.css
@@ -24,9 +24,9 @@ section {
 .left {
   width: 40%;
   height: 300px;
-  background: url(https://images.unsplash.com/photo-1542662565-7e4b66bae529?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=564&q=80)
+  background: url(https://ik.imagekit.io/72bccx2bu/AVINAS.jpeg)
     no-repeat center / cover;
-  border-radius: 8px;
+  border-radius: 50%;
   z-index: 10;
 }
 .right {
@@ -73,8 +73,7 @@ section {
     margin: 0 20px;
   }
   .left {
-    width: 65%;
-    height: 250px;
+    width: 80%;
     z-index: 10;
   }
   .right {
@@ -102,13 +101,12 @@ section {
   }
   .left {
     width: 40%;
-    height: 250px;
     z-index: 10;
     padding: 20px;
     background-color: #29A0D3;
   }
   .right {
-    width: 100%;
+    width: 80%;
     margin: 0;
     padding: 8%;
     padding-top: 120px;    
