--- a/src/css/team.css
+++ b/src/css/team.css
@@ -40,6 +40,7 @@
 }
 .content{
     margin: 0;
+    
 }
 .card-container .card .content {
   position: absolute;
@@ -64,9 +65,9 @@
 }
 .card-container .card .content .contentBx h3 {
   text-transform: uppercase;
-  color: #fff;
+  color: black;
   letter-spacing: 2px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 18px;
   text-align: center;
   margin: 20px 0 15px;
@@ -82,10 +83,17 @@
 }
 .card-container .card .content .contentBx h3 span {
   font-size: 12px;
-  font-weight: 300;
+  font-weight: 500;
   text-transform: initial;
 }
 
+ .card img{
+  padding: 5%;
+  padding-bottom: 30%;
+  width: 100%; /* or any custom size */
+    height: 100%; 
+    object-fit: cover;
+}
 
 
 .event_nameteam{
