--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -17,7 +17,7 @@
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  box-shadow: 0px 0px 8px #c0c0c0;
+  box-shadow: 0px 0px 8px #191919;
 }
 .question h3 {
   font-size: 16px;
@@ -31,11 +31,12 @@
   text-align: justify;
 }
 .answer {
-  background-color: #ffffff;
+  background-color: #2c3333;
+  color: #fff;
   padding: 12px;
   margin: 8px 0;
   border-radius: 8px;
-  box-shadow: 0px 0px 8px #c0c0c0;
+  box-shadow: 0px 0px 8px #191919;
   display: flex;
   justify-content: space-between;
   cursor: pointer;
@@ -87,8 +88,9 @@
   transform: rotate(-180deg);
 }
 .q-light {
-  background-color: #fff;
-  border: 2px solid #fff;
+  background-color: #2c3333;
+  border: 2px solid #2c3333;
+  color: #fff;
 }
 .q-light p {
   transition: all ease-out 0.3s;
