--- a/src/css/team.css
+++ b/src/css/team.css
@@ -4,15 +4,20 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins";
+  
+  /* overflow-x: hidden; */
 }
 
 .html{
   overflow-x: hidden;
 }
 .team-section{
+  background: #212121;
+  overflow-x: hidden;
   width: 100vw;
 }
 .team-container {
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,4 +108,7 @@
   text-align: center;
 }
 
+.team{
+  overflow-x: hidden;
+}
 
