--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -10,7 +10,7 @@
   padding: 30px 0 10px;
 }
 .question {
-  padding: 0 12px;
+  padding: 6px 12px;
   margin: 8px 0;
   border-radius: 8px;
   display: flex;
@@ -104,6 +104,9 @@
 @media (max-width: 760px) {
   .faq h2 {
     font-size: 24px;
+  }
+  .question {
+    padding: 10px 12px;
   }
   .question h3 {
     font-size: 14px;
