--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -6,7 +6,7 @@
   height: 100vh;
   /* min-height: 750px; */
   background-color: #000;
-  opacity: 0.7;
+  opacity: 0.8;
   z-index: 3;
 }
 
@@ -36,8 +36,14 @@
   font-weight: 800;
   text-align: center;
 }
+.event_nameteam {
+  margin-top: 10%;
+  font-size: 65px;
+  font-weight: 800;
+  text-align: center;
+}
 .event_year {
-  color: #29a0d3;
+  color: var(--blue);
 }
 .event_tagline {
   font-size: 19px;
