--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+:root {
+  --blue: #29a0d3;
+  --pink: #c372f2;
+  --lpink: #d193f5;
+  --ldark: #313131;
+  --vdark: #212121;
+}
 body,
 html {
   width: 100%;
