--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -31,7 +31,7 @@
   text-align: justify;
 }
 .answer {
-  background-color: #2c3333;
+  background-color: var(--ldark);
   color: #fff;
   padding: 12px;
   margin: 8px 0;
@@ -88,8 +88,8 @@
   transform: rotate(-180deg);
 }
 .q-light {
-  background-color: #2c3333;
-  border: 2px solid #2c3333;
+  background-color: var(--ldark);
+  border: 2px solid var(--ldark);
   color: #fff;
 }
 .q-light p {
