--- a/src/css/heading.css
+++ b/src/css/heading.css
@@ -1,28 +1,27 @@
 .heading {
-    margin: 20px auto 60px;
-    /* font-family: sans-serif; */
-    font-family: "Poppins";
-    max-width: 35vw;
+  margin: 20px auto 60px;
+  /* font-family: sans-serif; */
+  font-family: "Poppins";
+  max-width: 35vw;
+}
+.heading h2 {
+  font-size: 40px;
+  font-weight: 700;
+  background: -webkit-linear-gradient(left, var(--pink), var(--lpink));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  padding: 30px 0 10px;
+  text-transform: uppercase;
+}
+.heading.light h2 {
+  color: #fff;
+}
+@media (max-width: 760px) {
+  .heading {
+    max-width: 80vw;
   }
   .heading h2 {
-    font-size: 40px;
-    font-weight: 700;
-    color: #29a0d3;
-    text-align: center;
-    padding: 30px 0 10px;
-    text-transform: uppercase;
+    font-size: 28px !important;
   }
-  .heading.light h2 {
-    color: #fff;
-  }
-  @media (max-width: 760px) {
-    .heading {
-      max-width: 80vw;
-    }
-    .heading h2 {
-      font-size: 28px !important;
-    }
-  }
-  
-
-  
+}
