--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -37,7 +37,10 @@
   text-align: center;
 }
 .event_year {
-  color: #29a0d3;
+  /* color: var(--pink); */
+  background: -webkit-linear-gradient(left, var(--pink), var(--lpink));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .event_tagline {
   font-size: 19px;
