--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -19,6 +19,28 @@ footer{
   font-size: 0.8rem;
 }
 
+.social-links{
+  text-align: center;
+  margin-left: 1%;
+}
+
+
+.m{
+  display: none;
+}
+
+.footer-header1{
+  text-align: center;
+}
+
+.main{
+  margin: 50px;
+  padding-top: 20px;
+  display: grid;
+  gap: 50px;
+  grid-template-columns: repeat(4, 1fr );
+}
+
 
 
 @media (max-width:960px) {
@@ -26,12 +48,15 @@ footer{
     width: 100%;
     top: 120px;
   }
+
+  
   
   .main{
   margin: 50px;
  display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 1fr;
+    
 }
   
   .logo{
@@ -44,6 +69,8 @@ footer{
   .link{
     grid-column: 1/3;
   }
+
+  
   
 	
 }
@@ -52,40 +79,48 @@ footer{
 
 
 
-@media (max-width:660px){
+@media screen and (max-width:768px){
   .main{
-    gap:10px;
-    margin: 0;
+    gap:0px;
 
+  }
+  .newsletter{
+    display: none;
+  }
+
+  .m{
+    display: block;
+  }
+
+  .r{
+    display: none;
   }
   
   .icons{
     display: flex;
+  }  
+  .lhr{
+    width: 45%;
+     margin-left:0;
   }
-  
- 
-  
   .row1{
     grid-column: 1/4;
   }
+  .social-links{
+    margin-top: 3%;
+    text-align: left;
+  }
+  .footer-header{
+    text-align: left;
+  }
+
+  
 }
-
-
-
-
-
-
 
 .manik{
   width: 120px;
 }
-.main{
-  margin: 50px;
-  padding-top: 20px;
-  display: grid;
-  gap: 50px;
-  grid-template-columns: repeat(4, 1fr );
-}
+
 .row1{
  margin-top: 50px;
  text-align: left;
@@ -211,9 +246,7 @@ hr{
   padding: 20px;
 }
 
-.logo {
-    text-align: center;
-}
+
 
 
 .social-links a{
