--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -23,6 +23,7 @@ figure.snip1157 img {
   vertical-align: middle;
   height: 90px;
   width: 90px;
+  object-fit: cover;
   border-radius: 50%;
   margin: 40px 0 0 10px;
 }
