--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -10,7 +10,7 @@
 footer{
   color: #fff;
   /* background: linear-gradient(to right, rgba(13,13,29) 0%, rgb(15, 79, 106) 100%); */
-  background: linear-gradient(0deg, #131313, #1d749a);;
+  background: linear-gradient(0deg, #131313, #e006ce);;
   position: relative;
   width: 100%;
   overflow-x: hidden;
