--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 :root {
   --blue: #29a0d3;
-  --pink: #c372f2;
-  --lpink: #d193f5;
+  /* --pink: #c372f2;
+  --lpink: #d193f5; */
+  --pink: #e006ce;
+  --lpink: #b331fe;
   --ldark: #313131;
   --vdark: #212121;
 }
