--- a/src/css/msgsecgen.css
+++ b/src/css/msgsecgen.css
@@ -32,7 +32,8 @@ section {
 .right {
   width: 100%;
   min-height: 400px;
-  background-color: #29A0D3;
+  background-color: #313131;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -40,7 +41,7 @@ section {
   border-radius: 8px;
   color: white;
   margin-left: -150px;
-  padding-left: 20%;
+  padding-left: 15%;
 }
 .right h1 {
   font-size: 40px;
@@ -105,7 +106,7 @@ section {
     width: 40%;
     z-index: 10;
     padding: 20px;
-    background-color: #29A0D3;
+    background-color: #313131;
   }
   .right {
     width: 80%;
