final update swaugat13

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   --blue: #29a0d3;
   /* --pink: #c372f2;
   --lpink: #d193f5; */
-  --pink: #e006ce;
+  --pink: #fc04e8;
   --lpink: #b331fe;
   --ldark: #313131;
   --vdark: #212121;
