minor color changes, added logo in index.html

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   --blue: #29a0d3;
   /* --pink: #c372f2;
   --lpink: #d193f5; */
-  --pink: #fc04e8;
-  --lpink: #b331fe;
+  --pink: #a222cc;
+  --lpink: #a222cc;
   --ldark: #313131;
   --vdark: #212121;
 }
