--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -16,7 +16,7 @@
 .myGallerySwiper .g-slide.swiper-slide-active {
   background-color: var(--ldark);
   padding: 6px;
-  border: 4px solid #29a0d3 !important;
+  border: 4px solid var(--pink) !important;
   border-radius: 32px;
   -webkit-filter: none !important;
 }
@@ -31,6 +31,9 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background-color: var(--pink);
 }
 @media screen and (max-width: 1024px) {
   .myGallerySwiper .g-slide {
@@ -48,7 +51,7 @@
   }
   .myGallerySwiper .g-slide.swiper-slide-active {
     padding: 4px;
-    border: 4px solid #29a0d3 !important;
+    border: 4px solid var(--pink) !important;
     border-radius: 28px;
     -webkit-filter: none !important;
   }
@@ -128,17 +131,17 @@
   justify-content: center;
 }
 .vertical-timeline-element-icon {
-  box-shadow: 0 0 0 5px hsl(280, 87%, 65%), inset 0 2px 0 rgb(0 0 0/8%),
+  box-shadow: 0 0 0 5px var(--pink), inset 0 2px 0 rgb(0 0 0/8%),
     0 3px 0 4px rgb(0 0 0/5%) !important;
 }
 .time_line .vertical-timeline-element-content {
   background-color: var(--ldark) !important;
   color: #fff;
-  box-shadow: 0 3px 0 #29a0d3 !important;
+  box-shadow: 0 3px 0 var(--pink) !important;
 }
 .vertical-timeline-element-content-arrow {
   border: 7px solid transparent;
-  border-right: 7px solid #29a0d3 !important;
+  border-right: 7px solid var(--pink) !important;
 }
 .timeline_logo img {
   border-radius: 100%;
