--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -65,8 +65,8 @@
   display: inline-block;
   color: #fff;
   position: absolute;
-  left: -40px;
-  bottom: 100px;
+  left: -120px;
+  bottom: 160px;
   font-size: 1rem;
   letter-spacing: 4px;
 }
@@ -75,10 +75,16 @@
   display: inline-block;
   color: #fff;
   position: absolute;
-  right: -40px;
-  bottom: 100px;
-  font-size: 1.5rem;
+  right: -20px;
+  bottom: 60px;
+  font-size: 1.75rem;
   cursor: pointer;
+}
+.hero_socials a {
+  color: #fff;
+}
+.hero_socials a:hover {
+  color: var(--pink);
 }
 #myCarousel,
 .hero-img {
