--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -7,6 +7,9 @@
   background-color: #212121;
   box-shadow: 0px 0px 8px #080808;
 }
+.navbar a {
+  text-decoration: none !important;
+}
 .navbar .navbar-menu {
   color: #fff;
   font-weight: 500;
@@ -15,7 +18,7 @@
   color: #131313;
 } */
 .navbar-menu:hover {
-  color: #29a0d3 !important;
+  color: var(--pink) !important;
 }
 .nav-link .register-button {
   border-radius: 20px;
@@ -46,7 +49,8 @@
     position: absolute;
     height: 4px;
     width: 0;
-    background-image: linear-gradient(to right, #29a0d3, hsl(280, 87%, 65%));
+    /* background-image: linear-gradient(to right, #29a0d3, hsl(280, 87%, 65%)); */
+    background-color: var(--pink);
     bottom: -10px;
     border-radius: 6px;
   }
