--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -10,7 +10,7 @@
 footer{
   color: #fff;
   /* background: linear-gradient(to right, rgba(13,13,29) 0%, rgb(15, 79, 106) 100%); */
-  background: linear-gradient(0deg, #131313, #e006ce);;
+  background: linear-gradient(0deg, #131313, #a222cc);;
   position: relative;
   width: 100%;
   overflow-x: hidden;
@@ -254,18 +254,15 @@ hr{
 	height: 9px;
 	width: 9px;
     padding: 3%;
-	/* background-color: rgba(255,255,255,0.2); */
 	margin:0 10px 10px 0;
 	text-align: center;
     font-size: 37px;
 	line-height: 30px;
 	border-radius: 50%;
-	color: #29a0d3;
+	color: #fff;
     display: inline-table;
-	/* transition: all 0.5s ease; */
     background: rgba(65,65,66,0.4);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    /* animation: float 5s ease-in-out infinite; */
 }
 
 
