--- a/src/css/msgsecgen.css
+++ b/src/css/msgsecgen.css
@@ -75,12 +75,15 @@ section {
     margin: 0 20px;
   }
   .left {
-    width: 80%;
+    width: 60%;
+    height: 250px;
     z-index: 10;
   }
   .right {
+    height: min-content;
     width: 100%;
     margin: 0;
+    font-size: 16px;
     padding: 5%;
     padding-top: 120px;    
     margin-top: -110px;
@@ -103,17 +106,18 @@ section {
     margin: 0 20px;
   }
   .left {
-    width: 40%;
+    width: 50%;
+    height: 300px;
     z-index: 10;
-    padding: 20px;
-    background-color: #313131;
   }
   .right {
-    width: 80%;
+    height: min-content;
+    width: 100%;
     margin: 0;
-    padding: 8%;
+    padding: 5%;
     padding-top: 120px;    
     margin-top: -110px;
+    
   }
   .content{
     display: block;
