--- a/src/css/committee.css
+++ b/src/css/committee.css
@@ -114,7 +114,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #29a0d2;
+    background-color: #a222cc;
     -ms-transform: rotateY(180deg);
     -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
