--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -143,10 +143,29 @@
   border: 7px solid transparent;
   border-right: 7px solid var(--pink) !important;
 }
+
+.vertical-timeline-element-date{
+  justify-content: left;
+  align-items: left;
+  display: flex;
+}
+
 .timeline_logo img {
   border-radius: 100%;
   width: 60px;
 }
+
+
+.vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
+    position: absolute;
+    width: 100%;
+    left: 124%;
+    top: 6px;
+    font-size: 16px;
+    font-size: 1rem;
+    text-align: left;
+}
+
 @media screen and (max-width: 1170px) {
   .timeline_logo img {
     width: 40px;
