--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+  transition: 0.2s;
+}
 .navbar.transparent {
   transition: all 0.6s ease-in-out;
   background-color: transparent;
@@ -14,9 +18,7 @@
   color: #fff;
   font-weight: 500;
 }
-/* .navbar.solid .navbar-menu {
-  color: #131313;
-} */
+
 .navbar-menu:hover {
   color: var(--pink) !important;
 }
