overflow bug fixed

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -144,19 +144,20 @@
   border-right: 7px solid var(--pink) !important;
 }
 
-.vertical-timeline-element-date{
-  justify-content: left;
-  align-items: left;
-  display: flex;
-}
-
 .timeline_logo img {
   border-radius: 100%;
   width: 60px;
 }
 
-
-.vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
+@media screen and (min-width: 1170px) {
+  .vertical-timeline-element-date {
+    justify-content: left;
+    align-items: left;
+    display: flex;
+  }
+  .vertical-timeline--two-columns
+    .vertical-timeline-element-content
+    .vertical-timeline-element-date {
     position: absolute;
     width: 100%;
     left: 124%;
@@ -164,10 +165,16 @@
     font-size: 16px;
     font-size: 1rem;
     text-align: left;
+  }
 }
-
 @media screen and (max-width: 1170px) {
   .timeline_logo img {
     width: 40px;
+  }
+  .vertical-timeline-element-content .vertical-timeline-element-date {
+    text-align: center !important;
+    float: none;
+
+    /* margin: auto; */
   }
 }
