--- a/src/css/msgsecgen.css
+++ b/src/css/msgsecgen.css
@@ -22,7 +22,7 @@ section {
   /* background-color: aqua; */
 }
 .left {
-  width: 40%;
+  width: 350px;
   height: 300px;
   background: url(https://ik.imagekit.io/72bccx2bu/AVINAS.jpeg)
     no-repeat center / cover;
@@ -75,7 +75,7 @@ section {
     margin: 0 20px;
   }
   .left {
-    width: 60%;
+    width: 250px;
     height: 250px;
     z-index: 10;
   }
@@ -106,8 +106,8 @@ section {
     margin: 0 20px;
   }
   .left {
-    width: 50%;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     z-index: 10;
   }
   .right {
