--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -12,7 +12,7 @@ figure.snip1157 {
   overflow: hidden;
   /* margin: 10px; */
   min-width: 220px;
-  max-width: 310px;
+  max-width: 360px;
   width: 100%;
   color: #333;
   text-align: left;
@@ -41,6 +41,7 @@ figure.snip1157 blockquote {
   padding: 30px 50px 30px 50px;
   font-size: 0.8em;
   font-weight: 500;
+  min-height: 370px;
   color: white;
   margin: 0;
   line-height: 1.6em;
@@ -168,8 +169,9 @@ figure.snip1157 .author h5 span {
   border-radius: 8px;
   position: relative;
   background: -webkit-linear-gradient(left, var(--pink), var(--lpink));
-  padding: 15%;
+  padding: 11.5%;
   font-size: 0.65em;
+  min-height: 250px;
   font-weight: 500;
   color: white;
   margin: 0;
@@ -178,3 +180,21 @@ figure.snip1157 .author h5 span {
 }
   
 }
+
+@media (min-width:769px) and (max-width:1200px) {
+  figure.snip1157 blockquote {
+    display: block;
+    border-radius: 8px;
+    position: relative;
+    min-height: 250px;
+    background: -webkit-linear-gradient(left, var(--pink), var(--lpink));
+    padding: 11%;
+    font-size: 0.65em;
+    font-weight: 500;
+    color: white;
+    margin: 0;
+    line-height: 1.4em;
+    font-style: italic;
+  }
+}
+  
